<resources>
    <string name="app_name">Snap2Win</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="abi_string">[{\"constant\":false,\"inputs\":[],\"name\":\"getVotes\",\"outputs\":[{\"name\":\"\",\"type\":\"uint256\"}],\"payable\":false,\"type\":\"function\"},{\"constant\":false,\"inputs\":[{\"name\":\"s\",\"type\":\"string\"}],\"name\":\"setUrl\",\"outputs\":[],\"payable\":false,\"type\":\"function\"},{\"constant\":false,\"inputs\":[],\"name\":\"currentOwner\",\"outputs\":[{\"name\":\"\",\"type\":\"address\"}],\"payable\":false,\"type\":\"function\"},{\"constant\":false,\"inputs\":[],\"name\":\"getUrl\",\"outputs\":[{\"name\":\"\",\"type\":\"string\"}],\"payable\":false,\"type\":\"function\"},{\"constant\":false,\"inputs\":[],\"name\":\"voteForUrl\",\"outputs\":[],\"payable\":false,\"type\":\"function\"},{\"inputs\":[{\"name\":\"s\",\"type\":\"string\"}],\"type\":\"constructor\"},{\"anonymous\":false,\"inputs\":[{\"indexed\":false,\"name\":\"_myString\",\"type\":\"string\"}],\"name\":\"Log1\",\"type\":\"event\"},{\"anonymous\":false,\"inputs\":[{\"indexed\":false,\"name\":\"s\",\"type\":\"string\"},{\"indexed\":false,\"name\":\"s2\",\"type\":\"string\"}],\"name\":\"Log2\",\"type\":\"event\"},{\"anonymous\":false,\"inputs\":[{\"indexed\":false,\"name\":\"s\",\"type\":\"string\"},{\"indexed\":false,\"name\":\"v\",\"type\":\"uint256\"}],\"name\":\"Log3\",\"type\":\"event\"}]</string>
    <!--string name="abi_string">[{\"constant\":false,\"inputs\":[{\"name\":\"s\",\"type\":\"string\"}],\"name\":\"setUrl\",\"outputs\":[],\"payable\":false,\"type\":\"function\"},{\"inputs\":[{\"name\":\"s\",\"type\":\"string\"}],\"type\":\"constructor\"}]</string-->
    <string name="contract_bytecode">606060405260405161092c38038061092c833981016040528080518201919060200150505b8060016000509080519060200190828054600181600116156101000203166002900490600052602060002090601f016020900481019282601f10607157805160ff1916838001178555609f565b82800160010185558215609f579182015b82811115609e5782518260005055916020019190600101906082565b5b50905060c6919060aa565b8082111560c2576000818150600090555060010160aa565b5090565b50505b50610854806100d86000396000f360606040526000357c0100000000000000000000000000000000000000000000000000000000900480630dc9601514610068578063252498a214610090578063b387ef92146100eb578063d6bd872714610129578063ebc9c2c8146101a957610063565b610002565b346100025761007a60048050506101bd565b6040518082815260200191505060405180910390f35b34610002576100e96004808035906020019082018035906020019191908080601f016020809104026020016040519081016040528093929190818152602001838380828437820191505050505050909091905050610438565b005b34610002576100fd60048050506104e9565b604051808273ffffffffffffffffffffffffffffffffffffffff16815260200191505060405180910390f35b346100025761013b6004805050610518565b60405180806020018281038252838181518152602001915080519060200190808383829060006004602084601f0104600302600f01f150905090810190601f16801561019b5780820380516001836020036101000a031916815260200191505b509250505060405180910390f35b34610002576101bb60048050506105d4565b005b60007f2eb55163c708725ffcc8cf3d899d2fc816c20deabeadbc0b64a22ffec303ecae6001600050604051808060200180602001838103835260058152602001807f75726c3a200000000000000000000000000000000000000000000000000000008152602001506020018381038252848181546001816001161561010002031660029004815260200191508054600181600116156101000203166002900480156102a95780601f1061027e576101008083540402835291602001916102a9565b820191906000526020600020905b81548152906001019060200180831161028c57829003601f168201915b5050935050505060405180910390a17fc000bb25173233e4ca7c4cc75aeaa76aefe473fd06106e9bf7ff4e54fb85454860026000506001600050604051808280546001816001161561010002031660029004801561033e5780601f1061031c57610100808354040283529182019161033e565b820191906000526020600020905b81548152906001019060200180831161032a575b50509150509081526020016040518091039020600050600001600050546040518080602001838152602001828103825260078152602001807f766f7465733a20000000000000000000000000000000000000000000000000008152602001506020019250505060405180910390a16002600050600160005060405180828054600181600116156101000203166002900480156104115780601f106103ef576101008083540402835291820191610411565b820191906000526020600020905b8154815290600101906020018083116103fd575b50509150509081526020016040518091039020600050600001600050549050610435565b90565b8060016000509080519060200190828054600181600116156101000203166002900490600052602060002090601f016020900481019282601f1061048757805160ff19168380011785556104b8565b828001600101855582156104b8579182015b828111156104b7578251826000505591602001919060010190610499565b5b5090506104e391906104c5565b808211156104df57600081815060009055506001016104c5565b5090565b50505b50565b6000600060009054906101000a900473ffffffffffffffffffffffffffffffffffffffff169050610515565b90565b602060405190810160405280600081526020015060016000508054600181600116156101000203166002900480601f0160208091040260200160405190810160405280929190818152602001828054600181600116156101000203166002900480156105c55780601f1061059a576101008083540402835291602001916105c5565b820191906000526020600020905b8154815290600101906020018083116105a857829003601f168201915b505050505090506105d1565b90565b6002600050600160005060405180828054600181600116156101000203166002900480156106395780601f10610617576101008083540402835291820191610639565b820191906000526020600020905b815481529060010190602001808311610625575b505091505090815260200160405180910390206000506000016000818150548092919060010191905055507f2eb55163c708725ffcc8cf3d899d2fc816c20deabeadbc0b64a22ffec303ecae60016000506040518080602001806020018381038352600f8152602001807f766f74656420666f722075726c3a20000000000000000000000000000000000081526020015060200183810382528481815460018160011615610100020316600290048152602001915080546001816001161561010002031660029004801561074e5780601f106107235761010080835404028352916020019161074e565b820191906000526020600020905b81548152906001019060200180831161073157829003601f168201915b5050935050505060405180910390a17fc000bb25173233e4ca7c4cc75aeaa76aefe473fd06106e9bf7ff4e54fb8545486002600050600160005060405180828054600181600116156101000203166002900480156107e35780601f106107c15761010080835404028352918201916107e3565b820191906000526020600020905b8154815290600101906020018083116107cf575b50509150509081526020016040518091039020600050600001600050546040518080602001838152602001828103825260078152602001807f766f7465733a20000000000000000000000000000000000000000000000000008152602001506020019250505060405180910390a15b56</string>
    <string name="prompt_value_to_store">URL to store</string>
    <string name="imageStorage_read">Read URL </string>
    <string name="imageStorage_readowner">Read owner</string>
    <string name="imageStorage_deploy">Deploy contract</string>
    <string name="imageStorage_read_receipt">Read receipt</string>
    <string name="imageStorage_write">Write URL value</string>
    <string name="ethereum_ethereum_not_installed">You need to install Ethereum Android first</string>
    <string name="error_field_required">This field is required</string>
</resources>
